# Event_Based_Navigation

./: .gitignore  Plot.py  README.md  out.txt  plot_imu.py
Firmware/Bluetooth/: BluetoothRecieve.py
Firmware/ESP32/ControlPi/: ControlPi.ino
Firmware/ESP32/UDPMessages/: UDPMessages.ino
Firmware/ESP32/USBMessages/: USBMessages.ino
Firmware/IMU_Cal/: Accel.csv  Mag.csv  accelerometer_data.csv  calibrate3.py  magnetometer_data.csv  out.txt  raw.csv  split_csv.py
Firmware/IMU_Cal/Calibrate_IMU/: Calibrate_IMU.ino
Firmware/Receiver/: UDP_ESPDebug.py  UserInterface.py
Firmware/Testing/RC_iBus/: RC_iBus.ino
Firmware/Testing/USBMessages/: USBMessages.ino
Firmware/src/Main/: Main.ino  displacement.cpp  displacement.h  motor_control.cpp  motor_control.h  receiver.cpp  receiver.h  stateChange.cpp  stateChange.h  (+2 more)
Hardware/Simulations/: DC_Motor_Control.docx  DC_motor_Model.slx  DC_motor_model.m  Motor_Control.slx
Software/: CMakeLists.txt  errors.txt  messages.txt  plot.py
Software/config/: blank_config.yaml  camera_configuration.yaml  estimator_config.yaml  estimator_configOLD.yaml  frame_type_configuration.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
Software/config/Misc_files/: DAVIS_Example.yaml  Hybrid.yaml  config.yaml
Software/include/: BackEnd.hpp  Communication.hpp  DataAcquisition.hpp  DavisDriver.hpp  Flags.hpp  FrontEnd.hpp  Logging.hpp  RingBuffer.hpp  ThreadInterface.hpp  TypeAliases.hpp  Types.hpp  threads.hpp
Software/logs/: Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.ERROR.20250208-202223.33588  Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.ERROR.20250208-220920.33000  Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.INFO.20250208-202223.33588  Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.INFO.20250208-220920.33000  Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.INFO.20250209-202722.17196  Event_Based_Navigation.exe.LAPTOP-AE5DP58F.pokew.log.WARNING.20250209-202722.17196  full_log.txt
Software/src/: BackEnd.cpp  Communication.cpp  DataAcquisition.cpp  DavisDriver.cpp  FrontEnd.cpp  Logging.cpp  ThreadInterface.cpp  main.cpp  threads.cpp
Software/utils/Dont_Compile/: fast_masked_sse.cpp  faster_corner_10_sse.cpp  nonmax_5x5.cpp
Software/utils/backend/include/: ceres_iteration_callback.hpp  error_interface.hpp  estimator.hpp  estimator_impl.hpp  estimator_types.hpp  homogeneous_point_error.hpp  homogeneous_point_local_parameterization.hpp  homogeneous_point_parameter_block.hpp  imu_error.hpp  local_parameterization_additional_interfaces.hpp  map.hpp  marginalization_error.hpp  marginalization_error_impl.hpp  parameter_block.hpp  pose_error.hpp  pose_local_parameterization.hpp  pose_parameter_block.hpp  relative_pose_error.hpp  reprojection_error.hpp  reprojection_error_base.hpp  reprojection_error_impl.hpp  speed_and_bias_error.hpp  speed_and_bias_parameter_block.hpp
Software/utils/backend/src/: estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  marginalization_error.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
Software/utils/camera/include/: camera.hpp  camera_impl.hpp  camera_models.hpp  camera_rig.hpp  camera_utils.hpp  camera_yaml_serialization.hpp
Software/utils/camera/src/: camera.cpp  camera_impl.cpp  camera_rig.cpp  camera_utils.cpp  camera_yaml_serialization.cpp
Software/utils/common/Don't Compile/: State_JPLQuatLocal.cpp  State_JPLQuatLocal.h
Software/utils/common/include/: Flags.hpp  Logging.hpp  RingBuffer-inl.hpp  RingBuffer.hpp  RingView.hpp  ThreadInterface.hpp  TimeConversions.hpp  TypeAliases.hpp  Types.hpp  combinatorics.hpp  egg_timer.hpp  file_utils.hpp  manifold.hpp  matrix.hpp  noncopyable.hpp  path_utils.hpp  random.hpp  random_matrix.hpp  statistics.hpp  stl_utils.hpp  string_utils.hpp  thread_pool.hpp  transformation.hpp  versioned_slot_handle.hpp  yaml_serialization.hpp
Software/utils/common/src/: Flags.cpp  ThreadInterface.cpp  matrix.cpp  random.cpp  thread_pool.cpp
Software/utils/frontend/include/: feature_initializer.hpp  feature_tracker.hpp  frame.hpp  imu_integrator.hpp  keyframe_selection.hpp  landmark_handle.hpp  landmark_table.hpp  landmark_triangulation.hpp  landmark_types.hpp  landmark_utils.hpp  landmarks_reprojector.hpp  line.hpp  lsq_solver-inl.hpp  lsq_solver.hpp  nframe.hpp  nframe_handle.hpp  nframe_table.hpp  nframe_utils.hpp  pose_optimizer.hpp  pose_prior.hpp  ransac_relative_pose.hpp  refinement.hpp  robust_cost.hpp  stereo_matcher.hpp  track_extractor.hpp  triangulation.hpp
Software/utils/frontend/src/: feature_initializer.cpp  feature_tracker.cpp  frame.cpp  imu_integrator.cpp  keyframe_selection.cpp  landmark_table.cpp  landmark_triangulation.cpp  landmark_types.cpp  landmark_utils.cpp  landmarks_reprojector.cpp  line.cpp  nframe.cpp  nframe_table.cpp  nframe_utils.cpp  pose_optimizer.cpp  ransac_relative_pose.cpp  refinement.cpp  stereo_matcher.cpp  track_extractor.cpp  triangulation.cpp
Software/utils/image/include/: cv_bridge.hpp  cv_connector_pixel_types.hpp  epipolar_matcher.hpp  epipolar_sampling.hpp  fast_detector.hpp  fast_masked.hpp  feature_descriptor.hpp  feature_detector.hpp  half_sample.hpp  image.hpp  image_base.hpp  image_cv.hpp  image_header.hpp  image_pyramid.hpp  image_raw.hpp  keypoints_wrapper.hpp  klt.hpp  memory_storage.hpp  occupancy_grid_2d.hpp  patch_score.hpp  patch_utils.hpp  pixel.hpp  pixel_enums.hpp  roi.hpp  size.hpp  sparse_stereo.hpp
Software/utils/image/src/: cv_bridge.cpp  cv_connector_pixel_types.cpp  epipolar_matcher.cpp  epipolar_sampling.cpp  fast_detector.cpp  fast_masked_neon.cpp  feature_descriptor.cpp  feature_detector.cpp  half_sample.cpp  image_cv.cpp  image_pyramid.cpp  image_raw.cpp  klt.cpp  occupancy_grid_2d.cpp  sparse_stereo.cpp
Testing/: TestPoints.py  TestingLocations.txt  full_log.txt
logs/: full_log.txt
